# iowa-scoring

./: README.md  pyproject.toml  requirements.txt
data/: iowa_games.parquet
notebooks/: analyze.ipynb
src/iowastats/: download.py
