[project]
name = "iowa-scoring"
version = "0.1"
description = "Predicting Iowa's football scoring"
authors = [{ name = "Frank Male", email = "frank.male@psu.edu" }]
license = { file = "LICENSE" }
classifiers = [
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["cfbd", "pandas", "pyarrow"]

[build-system]
requires = ["hatchling>=0.7"]
build-backend = "hatchling.build"

[tool.check-manifest]
ignore = [".ruff_cache/**"]

[tool.ruff]
select = [
  "E",
  "F",
  "W",    # flake8
  "B",
  "B904", # flake8-bugbear
  "I",    # isort
  "ARG",  # flake8-unused-arguments
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
  "RET504", # 'unnecessary' variable assignment before return statement
]
line-length = 99
target-version = "py37"
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"noxfile.py" = ["T", "T201"]
"tests/**.py" = ["D101", "D102", "D103"]
